@@ -1,3 +1,7 @@
+Mon Jun 05 13:42:24 CET 2006    Frediano Ziglio <freddy77@angelfire.com>
+	* src/ctlib/ct.c src/tds/token.c:
+	- style and cleanup
+
 Mon May 29 13:38:05 CET 2006    Frediano Ziglio <freddy77@angelfire.com>
 	* m4/sprintf_i64_format.m4: fix quoting
 
